--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <img src="">
   </div>
   <div class="intro-header">
-    <h1>Coding Journey</h1>
+    <h1>Memories</h1>
     <p>It's all about the journey</p>
   </div>
 </header>
