slideshow new technique

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 <body>
 <header class="intro">
   <div class="intro-slideshow">
-    <img src="">
-    <img src="">
+    <img src="" id="img01">
+    <img src="" id="img02">
   </div>
   <div class="intro-header">
     <h1>Memories</h1>
