--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
     <img src="" id="img02">
   </div>
   <div class="intro-header">
-    <h1>Memories</h1>
+    <h2>Memories</h2>
+    <h3>Sub Memories</h3>
     <p>It's all about the journey</p>
   </div>
 </header>
