--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body>
 <header class="intro">
   <div class="intro-slideshow">
-    <img src="" id="img01">
+    <img src="" id="img_photo">
   </div>
   <div class="intro-header">
     <h2>Memories</h2>
