--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>SynoPlayer</title>
+  <title>Eyedeea Photos</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
