--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload-0 is-preload-1 is-preload-2">
+	<body class="fullscreen is-preload-0 is-preload-1 is-preload-2">
 
 		<!-- Main -->
 			<div id="main">
@@ -41,10 +41,10 @@
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/eyedeea.js"></script>
+			<script src="assets/js/browser.min.js"></script>			
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/eyedeea.js"></script>
 
 	</body>
 </html>
