--- a/web/index.html
+++ b/web/index.html
@@ -1,50 +1,80 @@
 <!DOCTYPE HTML>
-<!--
-	Lens by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
-	<head>
-		<title>Lens by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="fullscreen is-preload-0 is-preload-1 is-preload-2">
 
-		<!-- Main -->
-			<div id="main">
+<head>
+	<title>Eyedeea Photos</title>
+	<meta charset="utf-8" />
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="assets/css/materialize.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
 
-				<!-- Header -->
-					<header id="header">
-						<h1>Eyedeea Photos</h1>
-						<p>Rediscover the Moments You Forgot.</p>
-						<ul class="icons">
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-					</header>
+<body class="fullscreen is-preload-0 is-preload-1 is-preload-2">
 
-				<!-- Thumbnail -->
-					<section id="thumbnails">				
-					</section>
+	<!-- Main -->
+	<div id="main">
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="copyright">
-							<li>&copy; <a href="https://www.eyediatech.com/">Eyedia Tech</a></li>
-						</ul>
-					</footer>
+		<!-- Header -->
+		<header id="header">
+			<h1>Eyedeea Photos</h1>
+			<p>Rediscover the Moments You Forgot.</p>
+			<ul class="icons">
+				<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+			</ul>
+		</header>
 
-			</div>
+		<!-- Thumbnail -->
+		<section id="thumbnails">
+		</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>			
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/eyedeea.js"></script>
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="copyright">
+				<li>&copy; <a href="https://www.eyediatech.com/">Eyedia Tech</a></li>
+			</ul>
+		</footer>
 
-	</body>
+	</div>
+	<div class="fixed-action-btn">
+		<a class="btn-floating btn-large red">
+			<i class="large material-icons">mode_edit</i>
+		</a>
+		<ul>
+			<li><a id="mt_trash_it" class="btn-floating tooltipped red" data-tooltip="(T)rash it"
+					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">delete</i></a></li>
+			<li><a id="mt_mark_it" class="btn-floating tooltipped blue" data-tooltip="(M)ark it"
+					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">bookmark</i></a></li>
+
+			<li><a id="mt_incorrect_location" class="btn-floating tooltipped purple"
+					data-tooltip="Incorrect Lo(c)ation" onclick="mt_hangle_tool_click(this.id)"><i
+						class="material-icons">edit_location</i></a></li>
+			<li><a id="mt_incorrect_date" class="btn-floating tooltipped purple"
+					data-tooltip="Incorrect (D)ate" onclick="mt_hangle_tool_click(this.id)"><i
+						class="material-icons">date_range</i></a></li>
+			<li><a id="mt_incorrect_album" class="btn-floating tooltipped purple"
+					data-tooltip="Incorrect (A)lbum" onclick="mt_hangle_tool_click(this.id)"><i
+						class="material-icons">photo_library</i></a></li>
+
+			<li><a id="mt_dont_show" class="btn-floating tooltipped red" data-tooltip="Dont (S)how"
+					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">thumb_down</i></a></li>
+			<li><a id="mt_love_it" class="btn-floating tooltipped green" data-tooltip="(L)ove it"
+					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">thumb_up</i></a></li>
+
+		</ul>
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/main.js"></script>
+	<script src="assets/js/materialize.min.js"></script>
+	<script src="assets/js/eyedeea.js"></script>
+
+</body>
+
 </html>
