major major milestone

--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,90 @@
 
 		<!-- Thumbnail -->
 		<section id="thumbnails">
+			<article  id="article-00">
+				<a id="a-00" class="thumbnail" href="api/view?photo_index=0"><img id="img-00"
+						src="api/view?photo_index=0" alt="" /></a>
+				<h2 id="title-00">Memories</h2>
+				<h3 id="sub-title-00">It's all about the journey</h3>
+				<p id="sub-sub-title-00">Eyedeea Photos</p>
+			</article>
+			<article  id="article-01">
+				<a id="a-01" class="thumbnail" href="api/view?photo_index=1" data-position="left center"><img
+						id="img-01" src="api/view?photo_index=1" alt="" /></a>
+				<h2 id="title-01">Memories</h2>
+				<h3 id="sub-title-01">It's all about the journey</h3>
+				<p id="sub-sub-title-01">Eyedeea Photos</p>
+			</article>
+			<article  id="article-02">
+				<a id="a-02" class="thumbnail" href="api/view?photo_index=2"><img id="img-02"
+						src="api/view?photo_index=2" alt="" /></a>
+				<h2 id="title-02">Memories</h2>
+				<h3 id="sub-title-02">It's all about the journey</h3>
+				<p id="sub-sub-title-02">Eyedeea Photos</p>
+			</article>
+			<article  id="article-03">
+				<a id="a-03" class="thumbnail" href="api/view?photo_index=3" data-position="top center"><img id="img-03"
+						src="api/view?photo_index=3" alt="" /></a>
+				<h2 id="title-03">Memories</h2>
+				<h3 id="sub-title-03">It's all about the journey</h3>
+				<p id="sub-sub-title-03">Eyedeea Photos</p>
+			</article>
+			<article  id="article-04">
+				<a id="a-04" class="thumbnail" href="api/view?photo_index=4"><img id="img-04"
+						src="api/view?photo_index=4" alt="" /></a>
+				<h2 id="title-04">Memories</h2>
+				<h3 id="sub-title-04">It's all about the journey</h3>
+				<p id="sub-sub-title-04">Eyedeea Photos</p>
+			</article>
+			<article  id="article-05">
+				<a id="a-05" class="thumbnail" href="api/view?photo_index=5" data-position="top center"><img id="img-05"
+						src="api/view?photo_index=5" alt="" /></a>
+				<h2 id="title-05">Memories</h2>
+				<h3 id="sub-title-05">It's all about the journey</h3>
+				<p id="sub-sub-title-05">Eyedeea Photos</p>
+			</article>
+			<article  id="article-06">
+				<a id="a-06" class="thumbnail" href="api/view?photo_index=6"><img id="img-06"
+						src="api/view?photo_index=6" alt="" /></a>
+				<h2 id="title-06">Memories</h2>
+				<h3 id="sub-title-06">It's all about the journey</h3>
+				<p id="sub-sub-title-06">Eyedeea Photos</p>
+			</article>
+			<article id="article-07">
+				<a id="a-07" class="thumbnail" href="api/view?photo_index=7"><img id="img-07"
+						src="api/view?photo_index=7" alt="" /></a>
+				<h2 id="title-07">Memories</h2>
+				<h3 id="sub-title-07">It's all about the journey</h3>
+				<p id="sub-sub-title-07">Eyedeea Photos</p>
+			</article>
+			<article id="article-08">
+				<a id="a-08" class="thumbnail" href="api/view?photo_index=8"><img id="img-08"
+						src="api/view?photo_index=8" alt="" /></a>
+				<h2 id="title-08">Memories</h2>
+				<h3 id="sub-title-08">It's all about the journey</h3>
+				<p id="sub-sub-title-08">Eyedeea Photos</p>
+			</article>
+			<article id="article-09">
+				<a id="a-09" class="thumbnail" href="api/view?photo_index=9"><img id="img-09"
+						src="api/view?photo_index=9" alt="" /></a>
+				<h2 id="title-09">Memories</h2>
+				<h3 id="sub-title-09">It's all about the journey</h3>
+				<p id="sub-sub-title-09">Eyedeea Photos</p>
+			</article>
+			<article id="article-10">
+				<a id="a-10" class="thumbnail" href="api/view?photo_index=10"><img id="img-10"
+						src="api/view?photo_index=10" alt="" /></a>
+				<h2 id="title-10">Memories</h2>
+				<h3 id="sub-title-10">It's all about the journey</h3>
+				<p id="sub-sub-title-10">Eyedeea Photos</p>
+			</article>
+			<article id="article-11">
+				<a id="a-11" class="thumbnail" href="api/view?photo_index=11"><img id="img-11"
+						src="api/view?photo_index=11" alt="" /></a>
+				<h2 id="title-11">Memories</h2>
+				<h3 id="sub-title-11">It's all about the journey</h3>
+				<p id="sub-sub-title-11">Eyedeea Photos</p>
+			</article>
 		</section>
 
 		<!-- Footer -->
@@ -49,15 +133,12 @@
 			<li><a id="mt_mark_it" class="btn-floating tooltipped blue" data-tooltip="(M)ark it"
 					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">bookmark</i></a></li>
 
-			<li><a id="mt_incorrect_location" class="btn-floating tooltipped purple"
-					data-tooltip="Incorrect Lo(c)ation" onclick="mt_hangle_tool_click(this.id)"><i
-						class="material-icons">edit_location</i></a></li>
-			<li><a id="mt_incorrect_date" class="btn-floating tooltipped purple"
-					data-tooltip="Incorrect (D)ate" onclick="mt_hangle_tool_click(this.id)"><i
-						class="material-icons">date_range</i></a></li>
-			<li><a id="mt_incorrect_album" class="btn-floating tooltipped purple"
-					data-tooltip="Incorrect (A)lbum" onclick="mt_hangle_tool_click(this.id)"><i
-						class="material-icons">photo_library</i></a></li>
+			<li><a id="mt_incorrect_location" class="btn-floating tooltipped purple" data-tooltip="Incorrect Lo(c)ation"
+					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">edit_location</i></a></li>
+			<li><a id="mt_incorrect_date" class="btn-floating tooltipped purple" data-tooltip="Incorrect (D)ate"
+					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">date_range</i></a></li>
+			<li><a id="mt_incorrect_album" class="btn-floating tooltipped purple" data-tooltip="Incorrect (A)lbum"
+					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">photo_library</i></a></li>
 
 			<li><a id="mt_dont_show" class="btn-floating tooltipped red" data-tooltip="Dont (S)how"
 					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">thumb_down</i></a></li>
