--- a/web/index.html
+++ b/web/index.html
@@ -124,7 +124,7 @@
 
 	</div>
 	<div class="fixed-action-btn">
-		<a class="btn-floating btn-large red">
+		<a class="btn-floating btn-large red auto-hide">
 			<i class="large material-icons">mode_edit</i>
 		</a>
 		<ul>
