--- a/web/index.html
+++ b/web/index.html
@@ -20,11 +20,9 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1>Eyedeea Photos</h1>
-			<p>Rediscover the Moments You Forgot.</p>
-			<ul class="icons">
-				<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-			</ul>
+			<img src="/images/Eyedeea_Photos_m_logo.png" title="Eyedeea Photos" width="50">
+			<h2>Eyedeea Photos</h2>
+			<h3>Rediscover the Moments You Forgot.</h3>
 		</header>
 
 		<!-- Thumbnail -->
