--- a/web/index.html
+++ b/web/index.html
@@ -140,8 +140,8 @@
 
 			<li><a id="mt_dont_show" class="btn-floating tooltipped red" data-tooltip="Dont (S)how"
 					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">thumb_down</i></a></li>
-			<li><a id="mt_love_it" class="btn-floating tooltipped green" data-tooltip="(L)ove it"
-					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">thumb_up</i></a></li>
+			<li><a id="mt_download" class="btn-floating tooltipped green" data-tooltip="(D)ownload"
+					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">download</i></a></li>
 
 		</ul>
 	</div>
