--- a/web/index.html
+++ b/web/index.html
@@ -125,7 +125,7 @@
 	</div>
 	<div class="fixed-action-btn">
 		<a class="btn-floating btn-large red auto-hide">
-			<i class="large material-icons">mode_edit</i>
+			<i class="large material-icons">photo</i>
 		</a>
 		<ul>
 			<li><a id="mt_trash_it" class="btn-floating tooltipped red" data-tooltip="(T)rash it"
@@ -137,8 +137,6 @@
 					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">edit_location</i></a></li>
 			<li><a id="mt_incorrect_date" class="btn-floating tooltipped purple" data-tooltip="Incorrect (D)ate"
 					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">date_range</i></a></li>
-			<li><a id="mt_incorrect_album" class="btn-floating tooltipped purple" data-tooltip="Incorrect (A)lbum"
-					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">photo_library</i></a></li>
 
 			<li><a id="mt_dont_show" class="btn-floating tooltipped red" data-tooltip="Dont (S)how"
 					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">do_not_disturb</i></a></li>
