--- a/web/index.html
+++ b/web/index.html
@@ -152,6 +152,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/materialize.min.js"></script>
+	<script src="assets/js/eyedeea_client.js"></script>
 	<script src="assets/js/eyedeea.js"></script>
 
 </body>
