--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body class="is-preload">
@@ -21,12 +22,8 @@
                 <header id="header">
                     <a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
                     <ul class="icons">
-                        <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                        <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                        <li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a>
-                        </li>
-                        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                        <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+                        <li><a href="https://github.com/eyedia/EyedeeaPhotos" target="_blank" class="icon brands fa fa-github"><span class="label">Git Hub</span></a></li>
+                        <li><a href="https://eyedeeaphotos.eyediatech.com/" target="_blank" class="icon brands fa fa-globe"><span class="label">Eyedeea Website</span></a></li>
                     </ul>
                 </header>
                 <!-- Content -->
