--- a/web/manage/index.html
+++ b/web/manage/index.html
@@ -19,14 +19,15 @@
 
                 <!-- Header -->
                 <header id="header">
-                    <a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+                    <div style="display: table;">                        
+                        <a href="index.html" class="logo">
+                            <img src="../images/Eyedeea_Photos_m_logo.png" width="10%" alt="Eyedeea Photos Logo" style="vertical-align: middle;" />                        
+                            <h1 style="display: inline;vertical-align: middle;">Eyedeea Photos</h1>
+                        </a>                    
+                    </div>
                     <ul class="icons">
-                        <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                        <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                        <li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a>
-                        </li>
-                        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                        <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+                        <li><a href="https://github.com/eyedia/EyedeeaPhotos" target="_blank" class="icon brands fa fa-github"><span class="label">Git Hub</span></a></li>
+                        <li><a href="https://eyedeeaphotos.eyediatech.com/" target="_blank" class="icon brands fa fa-globe"><span class="label">Eyedeea Website</span></a></li>
                     </ul>
                 </header>
                 <!-- Content -->
