pagination 2nd cut

--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -56,6 +56,9 @@
                         </thead>
                         <tbody id="scan-logs-table-body">
                         </tbody>
+                        <ul id="pagination" class="pagination">
+
+                        </ul>
                     </table>
                     <!--Update Source-->                    
                     <header class="main">
