--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -38,9 +38,15 @@
                 <section>
                     <!--Update Source-->                    
                     <header class="main">
-                        <h2 id="title">Photo Sources</h2>
-                        
+                        <h2 id="title">Photo Sources</h2>                        
                     </header>
+                    <!-- Scan-->
+                    <h3>Scan</h3>
+                    <div class="col-12">
+                        <p>Last scanned: 2025-02-27 22:55:31                 
+                        <a href="#" onclick="scan()" class="button primary icon fa fa-search" style="vertical-align: middle;">Scan Now</a>
+                        </p>
+                    </div>
                     <!-- Scan Logs-->
                     <h3>Scan Logs</h3>
                     <table>
