--- a/web/manage/index.html
+++ b/web/manage/index.html
@@ -19,74 +19,112 @@
 
                 <!-- Header -->
                 <header id="header">
-                    <div style="display: table;">                        
+                    <div style="display: table;">
                         <a href="index.html" class="logo">
-                            <img src="../images/Eyedeea_Photos_m_logo.png" width="10%" alt="Eyedeea Photos Logo" style="vertical-align: middle;" />                        
+                            <img src="../images/Eyedeea_Photos_m_logo.png" width="10%" alt="Eyedeea Photos Logo"
+                                style="vertical-align: middle;" />
                             <h1 style="display: inline;vertical-align: middle;">Eyedeea Photos</h1>
-                        </a>                    
+                        </a>
                     </div>
                     <ul class="icons">
-                        <li><a href="https://github.com/eyedia/EyedeeaPhotos" target="_blank" class="icon brands fa fa-github"><span class="label">Git Hub</span></a></li>
-                        <li><a href="https://eyedeeaphotos.eyediatech.com/" target="_blank" class="icon brands fa fa-globe"><span class="label">Eyedeea Website</span></a></li>
+                        <li><a href="https://github.com/eyedia/EyedeeaPhotos" target="_blank"
+                                class="icon brands fa fa-github"><span class="label">Git Hub</span></a></li>
+                        <li><a href="https://eyedeeaphotos.eyediatech.com/" target="_blank"
+                                class="icon brands fa fa-globe"><span class="label">Eyedeea Website</span></a></li>
                     </ul>
                 </header>
                 <!-- Content -->
-                <section>
-                    <header class="main">
-                        <h1 id="title">Photo Sources</h1>
-                        <div id="div_msg" name="div_msg" class="col-12" style="visibility:hidden;">
-                            <p id="msg" name="msg">Saved successfully.</p>
-                            <span id="auth_status_caption" name="auth_status_caption">Authentication Status</span>
-                            <span id="auth_status_value" name="auth_status_value" class="inline-p">Success</span>
-                        </div>
-                    </header>
-                    <div class="row gtr-200">
-                        <div class="col-6 col-12-medium">
-                            <div class="row gtr-uniform">
-                                <div class="col-6 col-12-xsmall">
-                                    <input type="text" name="name" id="name" value="" placeholder="Name"
-                                        oninput="validate_fields()" autofocus />
-                                </div>
-                                <div class="col-6 col-12-xsmall">
+                <div style="height: 10px;"></div>
+                <div class="col-12">
+                    <h3>3 Photo sources are configured with 32000 photos.
+                        <a href="#" onclick="window.dialog.showModal();" class="button primary icon"
+                            style="vertical-align: middle;">Add New</a>
+                    </h3>
+                </div>
+                <div class="table-wrapper">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Source Name</th>
+                                <th>Total Photos</th>
+                                <th>Last Scanned</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>NAS</td>
+                                <td>31765</td>
+                                <td>2025-02-27 22:55:31</td>
+                            </tr>
+                            <tr>
+                                <td>FS</td>
+                                <td>12</td>
+                                <td>2025-02-15 07:55:31</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <dialog id="dialog">
+                    <section>
+                        <header class="main">
+                            <h2 id="title">Add New Photo Source</h2>
+                            <div id="div_msg" name="div_msg" class="col-12" style="visibility:hidden;">
+                                <p id="msg" name="msg">Saved successfully.</p>
+                                <span id="auth_status_caption" name="auth_status_caption">Authentication Status</span>
+                                <span id="auth_status_value" name="auth_status_value" class="inline-p">Success</span>
+                            </div>
+                        </header>
+                        <div class="row gtr-200">
+                            <div class="col-12">
+                                <div class="row gtr-uniform">
+                                    <div class="col-6 col-12-xsmall">
+                                        <input type="text" name="name" id="name" value="" placeholder="Name"
+                                            oninput="validate_fields()" autofocus />
+                                    </div>
+                                    <div class="col-6 col-12-xsmall">
+                                        <div class="col-12">
+                                            <select name="source_type" id="source_type">
+                                                <option value="">- Type -</option>
+                                                <option value="nas">Synology NAS</option>
+                                                <option value="fs">File System</option>
+                                            </select>
+                                        </div>
+                                    </div>
                                     <div class="col-12">
-                                        <select name="source_type" id="source_type">
-                                            <option value="">- Type -</option>
-                                            <option value="nas">Synology NAS</option>
-                                            <option value="fs">File System</option>
-                                        </select>
+                                        <input type="text" name="url" id="url" value=""
+                                            placeholder="https://SYNOLOGY-IP:5001/webapi" oninput="validate_fields()" />
+                                    </div>
+                                    <div class="col-6 col-12-xsmall">
+                                        <input type="text" name="user_name" id="user_name" value=""
+                                            placeholder="User Name" oninput="validate_fields()" />
+                                    </div>
+                                    <div class="col-6 col-12-xsmall">
+                                        <input type="password" name="password" id="password" value=""
+                                            placeholder="Password" oninput="validate_fields()" />
+                                    </div>
+                                    <div id="google_api_key" name="google_api_key" class="col-12"
+                                        style="visibility:hidden">
+                                        <input type="text" name="url_fs" id="url_fs" value=""
+                                            placeholder="Google Geo API Key (Optional)" />
+                                    </div>
+                                    <!-- Break -->
+                                    <div class="col-12">
+                                        <ul class="actions">
+                                            <li><input id="add" name="add" type="submit" value="Add" class="primary"
+                                                    disabled /></li>
+                                            <li><input onclick="window.dialog.close();" type="reset" value="Cancel" />
+                                            </li>
+                                        </ul>
                                     </div>
                                 </div>
-                                <div class="col-12">
-                                    <input type="text" name="url" id="url" value=""
-                                        placeholder="https://SYNOLOGY-IP:5001/webapi" oninput="validate_fields()" />
-                                </div>
-                                <div class="col-6 col-12-xsmall">
-                                    <input type="text" name="user_name" id="user_name" value="" placeholder="User Name"
-                                        oninput="validate_fields()" />
-                                </div>
-                                <div class="col-6 col-12-xsmall">
-                                    <input type="password" name="password" id="password" value="" placeholder="Password"
-                                        oninput="validate_fields()" />
-                                </div>
-                                <div id="google_api_key" name="google_api_key" class="col-12" style="visibility:hidden">
-                                    <input type="text" name="url_fs" id="url_fs" value=""
-                                        placeholder="Google Geo API Key (Optional)" />
-                                </div>
-                                <!-- Break -->
-                                <div class="col-12">
-                                    <ul class="actions">
-                                        <li><input id="add" name="add" type="submit" value="Add" class="primary"
-                                                /></li>
-                                        <li><input type="reset" value="Cancel" /></li>
-                                    </ul>
-                                </div>
+
                             </div>
-
                         </div>
-                    </div>
+                    </section>
 
-                </section>
-
+                    <button onclick="window.dialog.close();" aria-label="close" class="x">❌</button>
+                </dialog>
             </div>
         </div>
 
@@ -146,7 +184,7 @@
     <script src="assets/js/manage_main.js"></script>
     <script src="assets/js/eyedeea_manage.js"></script>
     <script>
-       get_sources();
+        get_sources();
     </script>
 
 </body>
