--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -44,7 +44,7 @@
                     <h3>Scan</h3>
                     <div class="col-12">
                         <p>Last scanned: 2025-02-27 22:55:31                 
-                        <a href="#" onclick="scan()" class="button primary icon fa fa-search" style="vertical-align: middle;">Scan Now</a>
+                        <a href="#" onclick="do_it(2)" class="button primary icon fa fa-search" style="vertical-align: middle;">Scan Now</a>
                         </p>
                     </div>
                     <!-- Scan Logs-->
