--- a/web/manage/index.html
+++ b/web/manage/index.html
@@ -79,7 +79,7 @@
                             <div class="col-12">
                                 <div class="row gtr-uniform">
                                     <div class="col-6 col-12-xsmall">
-                                        <input type="text" name="name" id="name" value="" placeholder="Name"
+                                        <input type="text" id="source_name" value="" placeholder="Name"
                                             oninput="validate_fields()" autofocus />
                                     </div>
                                     <div class="col-6 col-12-xsmall">
