ui scan implementation

--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -70,13 +70,13 @@
                     <h3>Scan History</h3>
                     <table>
                         <thead>
-                            <tr>
-                                <th>Folder Id</th>
-                                <th>Folder Name</th>
-                                <th>Info</th>
+                            <tr>                                
                                 <th>Started</th>
                                 <th>Finished</th>
                                 <th>Duration</th>
+                                <th>Total Photos</th>
+                                <th>Total Dirs</th>
+                                <th>Total Geo APIs</th>
                             </tr>
                         </thead>
                         <tbody id="scan-logs-table-body">
