--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -47,7 +47,7 @@
                                     <p>Total Photos:</p>
                                 </div>
                                 <div>
-                                    <p id="total_photos">27271 </p>
+                                    <p id="total_photos">0</p>
                                 </div>
                             </div>
                             <div class="row gtr-uniform">
@@ -55,7 +55,7 @@
                                     <p>Total Directories:</p>
                                 </div>
                                 <div>
-                                    <p id="total_dirs">120 </p>
+                                    <p id="total_dirs">0</p>
                                 </div>
                             </div>
                             <div class="row gtr-uniform">
@@ -63,7 +63,7 @@
                                     <p>Last scanned:</p>
                                 </div>
                                 <div>
-                                    <p id="last_scanned">2025-02-27 22:55:31 </p>
+                                    <p id="last_scanned">N/A</p>
                                 </div>
                                 <div style="padding-top: 12px;">
                                     <a id="btn_scan" onclick="scan()" class="button primary icon solid fa-search">Scan Now</a>
@@ -140,7 +140,7 @@
                             <input type="text" id="apiKey" name="apiKey">
                         </div>
                     </div>
-                    <input id="add" name="add" type="submit" value="Save" class="primary" />
+                    <input id="add" name="add" type="submit" value="Update" class="primary" />
                     <div id="message" class="message hidden"></div>
 
                 </section>
@@ -202,11 +202,6 @@
     <script src="assets/js/util.js"></script>
     <script src="assets/js/manage_main.js"></script>
     <script src="assets/js/eyedeea_manage.js"></script>
-    <script>
-        // get_sources();
-        // get_source();
-        //nav_sources_ctr.classList.add("active");
-    </script>
 
 </body>
 
